a1/brendan_gordon/TEST_PROGRAMS/invalidtype/jonathan_campbell/5.min
var x: int;

x = x + 1.0;
